--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,go,visualstudiocode,node,react
 
 babyfood-linux
+**/__debug_*
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
