--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@apollo/client": "^3.10.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
